// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MeetingContainer /> snapshot should match snapshot 1`] = `
<MeetingContainer>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with avatar supplied 1`] = `
<MeetingContainer
  avatar={
    <Avatar>
      BR
    </Avatar>
  }
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-avatar"
              >
                <Avatar
                  size={32}
                >
                  <div
                    aria-hidden="false"
                    aria-label=""
                    className="md-avatar-wrapper"
                    data-color="default"
                    data-size={32}
                    role="img"
                  />
                </Avatar>
              </div>
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with children supplied 1`] = `
<MeetingContainer>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      >
                        Test Child
                      </mdc-text>
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with circle action buttons supplied 1`] = `
<MeetingContainer
  actionButtons={
    Array [
      <ButtonCircle
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        T
      </ButtonCircle>,
      <ButtonCircle
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        T
      </ButtonCircle>,
      <ButtonCircle
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        T
      </ButtonCircle>,
    ]
  }
  meetingTitle="TestMeeting"
  scheduleInfoFirst="10:00am-11:00am"
  scheduleInfoSecond="Mon, Jan 1, 2023"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      >
                        TestMeeting
                      </mdc-text>
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      >
                        10:00am-11:00am
                      </mdc-text>
                    </Text>
                  </Text>
                  <DividerDot>
                    <Bullet
                      className="md-divider-dot-wrapper"
                      size="small"
                    >
                      <mdc-bullet
                        class="md-divider-dot-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Bullet>
                  </DividerDot>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      >
                        Mon, Jan 1, 2023
                      </mdc-text>
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  >
                    <ButtonCircle
                      color="join"
                      ghost={true}
                      key="0"
                      outline={true}
                      size={28}
                    >
                      <Button
                        className="md-button-circle-wrapper"
                        color="positive"
                        onClick={[Function]}
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        size={28}
                        variant="secondary"
                      >
                        <mdc-button
                          class="md-button-circle-wrapper"
                          onPointerDown={[Function]}
                          onPointerUp={[Function]}
                          suppressHydrationWarning={true}
                        >
                          T
                        </mdc-button>
                      </Button>
                    </ButtonCircle>
                    <ButtonCircle
                      color="join"
                      ghost={true}
                      key="1"
                      outline={true}
                      size={28}
                    >
                      <Button
                        className="md-button-circle-wrapper"
                        color="positive"
                        onClick={[Function]}
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        size={28}
                        variant="secondary"
                      >
                        <mdc-button
                          class="md-button-circle-wrapper"
                          onPointerDown={[Function]}
                          onPointerUp={[Function]}
                          suppressHydrationWarning={true}
                        >
                          T
                        </mdc-button>
                      </Button>
                    </ButtonCircle>
                    <ButtonCircle
                      color="join"
                      ghost={true}
                      key="2"
                      outline={true}
                      size={28}
                    >
                      <Button
                        className="md-button-circle-wrapper"
                        color="positive"
                        onClick={[Function]}
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        size={28}
                        variant="secondary"
                      >
                        <mdc-button
                          class="md-button-circle-wrapper"
                          onPointerDown={[Function]}
                          onPointerUp={[Function]}
                          suppressHydrationWarning={true}
                        >
                          T
                        </mdc-button>
                      </Button>
                    </ButtonCircle>
                  </div>
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with className 1`] = `
<MeetingContainer
  className="example-class"
>
  <Card
    className="example-class md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="example-class md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="example-class md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with disable supplied 1`] = `
<MeetingContainer
  actionButtons={
    Array [
      <ButtonPill
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        <Text
          tagName="p"
        >
          Message
        </Text>
      </ButtonPill>,
      <ButtonPill
        color="join"
        size={28}
      >
        <Text
          tagName="p"
        >
          Join
        </Text>
      </ButtonPill>,
    ]
  }
  disabled={true}
  meetingTitle="Test Meeting Title"
  spaceLink={
    <ButtonHyperlink>
      Example Link
    </ButtonHyperlink>
  }
  tags={
    Array [
      <Chip>
        Messages
      </Chip>,
      <Chip>
        Recording
      </Chip>,
    ]
  }
>
  <Card
    className="md-meeting-container-wrapper"
    disabled={true}
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
      disabled={true}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      >
                        Test Meeting Title
                      </mdc-text>
                    </Text>
                  </Text>
                  <DividerDot>
                    <Bullet
                      className="md-divider-dot-wrapper"
                      size="small"
                    >
                      <mdc-bullet
                        class="md-divider-dot-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Bullet>
                  </DividerDot>
                  <ButtonHyperlink
                    className="md-meeting-container-space-link"
                  >
                    <FocusRing>
                      <FocusRing
                        focusClass="md-focus-ring-wrapper children"
                        focusRingClass="md-focus-ring-wrapper children"
                      >
                        <a
                          className="md-button-hyperlink-wrapper md-meeting-container-space-link"
                          data-disabled={false}
                          data-inverted={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchCancel={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          Example Link
                        </a>
                      </FocusRing>
                    </FocusRing>
                  </ButtonHyperlink>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div
                  className="md-meeting-container-tags"
                >
                  <Chip
                    key="0"
                  >
                    <Chip
                      onClick={[Function]}
                      onPointerDown={[Function]}
                      onPointerUp={[Function]}
                    >
                      <mdc-chip
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        suppressHydrationWarning={true}
                      >
                        Messages
                      </mdc-chip>
                    </Chip>
                  </Chip>
                  <Chip
                    key="1"
                  >
                    <Chip
                      onClick={[Function]}
                      onPointerDown={[Function]}
                      onPointerUp={[Function]}
                    >
                      <mdc-chip
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        suppressHydrationWarning={true}
                      >
                        Recording
                      </mdc-chip>
                    </Chip>
                  </Chip>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
                data-anchor="top"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  >
                    <ButtonPill
                      color="join"
                      ghost={true}
                      key="0"
                      outline={true}
                      size={28}
                    >
                      <Button
                        className="md-button-pill-wrapper"
                        color="positive"
                        data-disabled-outline={false}
                        data-grown={false}
                        onClick={[Function]}
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        size={28}
                        softDisabled={false}
                        variant="secondary"
                      >
                        <mdc-button
                          class="md-button-pill-wrapper"
                          data-disabled-outline={false}
                          data-grown={false}
                          onPointerDown={[Function]}
                          onPointerUp={[Function]}
                          suppressHydrationWarning={true}
                        >
                          <Text
                            key=".$.0"
                            tagName="p"
                          >
                            <Text
                              className="md-text-wrapper"
                              tagname="p"
                              type="body-large-regular"
                            >
                              <mdc-text
                                class="md-text-wrapper"
                                suppressHydrationWarning={true}
                              >
                                Message
                              </mdc-text>
                            </Text>
                          </Text>
                        </mdc-button>
                      </Button>
                    </ButtonPill>
                    <ButtonPill
                      color="join"
                      key="1"
                      size={28}
                    >
                      <Button
                        className="md-button-pill-wrapper"
                        color="positive"
                        data-disabled-outline={false}
                        data-grown={false}
                        onClick={[Function]}
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        size={28}
                        softDisabled={false}
                        variant="primary"
                      >
                        <mdc-button
                          class="md-button-pill-wrapper"
                          data-disabled-outline={false}
                          data-grown={false}
                          onPointerDown={[Function]}
                          onPointerUp={[Function]}
                          suppressHydrationWarning={true}
                        >
                          <Text
                            key=".$.0"
                            tagName="p"
                          >
                            <Text
                              className="md-text-wrapper"
                              tagname="p"
                              type="body-large-regular"
                            >
                              <mdc-text
                                class="md-text-wrapper"
                                suppressHydrationWarning={true}
                              >
                                Join
                              </mdc-text>
                            </Text>
                          </Text>
                        </mdc-button>
                      </Button>
                    </ButtonPill>
                  </div>
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with id 1`] = `
<MeetingContainer
  id="example-id"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
    id="example-id"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
      id="example-id"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            id="example-id"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with pill action buttons supplied 1`] = `
<MeetingContainer
  actionButtons={
    Array [
      <ButtonPill
        color="join"
        ghost={true}
        outline={true}
        size={28}
      >
        <Text
          tagName="p"
        >
          Message
        </Text>
      </ButtonPill>,
      <ButtonPill
        color="join"
        size={28}
      >
        <Text
          tagName="p"
        >
          Join
        </Text>
      </ButtonPill>,
    ]
  }
  meetingTitle="TestMeeting"
  scheduleInfoFirst="10:00am-11:00am"
  scheduleInfoSecond="Mon, Jan 1, 2023"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      >
                        TestMeeting
                      </mdc-text>
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      >
                        10:00am-11:00am
                      </mdc-text>
                    </Text>
                  </Text>
                  <DividerDot>
                    <Bullet
                      className="md-divider-dot-wrapper"
                      size="small"
                    >
                      <mdc-bullet
                        class="md-divider-dot-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Bullet>
                  </DividerDot>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      >
                        Mon, Jan 1, 2023
                      </mdc-text>
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  >
                    <ButtonPill
                      color="join"
                      ghost={true}
                      key="0"
                      outline={true}
                      size={28}
                    >
                      <Button
                        className="md-button-pill-wrapper"
                        color="positive"
                        data-disabled-outline={false}
                        data-grown={false}
                        onClick={[Function]}
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        size={28}
                        softDisabled={false}
                        variant="secondary"
                      >
                        <mdc-button
                          class="md-button-pill-wrapper"
                          data-disabled-outline={false}
                          data-grown={false}
                          onPointerDown={[Function]}
                          onPointerUp={[Function]}
                          suppressHydrationWarning={true}
                        >
                          <Text
                            key=".$.0"
                            tagName="p"
                          >
                            <Text
                              className="md-text-wrapper"
                              tagname="p"
                              type="body-large-regular"
                            >
                              <mdc-text
                                class="md-text-wrapper"
                                suppressHydrationWarning={true}
                              >
                                Message
                              </mdc-text>
                            </Text>
                          </Text>
                        </mdc-button>
                      </Button>
                    </ButtonPill>
                    <ButtonPill
                      color="join"
                      key="1"
                      size={28}
                    >
                      <Button
                        className="md-button-pill-wrapper"
                        color="positive"
                        data-disabled-outline={false}
                        data-grown={false}
                        onClick={[Function]}
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        size={28}
                        softDisabled={false}
                        variant="primary"
                      >
                        <mdc-button
                          class="md-button-pill-wrapper"
                          data-disabled-outline={false}
                          data-grown={false}
                          onPointerDown={[Function]}
                          onPointerUp={[Function]}
                          suppressHydrationWarning={true}
                        >
                          <Text
                            key=".$.0"
                            tagName="p"
                          >
                            <Text
                              className="md-text-wrapper"
                              tagname="p"
                              type="body-large-regular"
                            >
                              <mdc-text
                                class="md-text-wrapper"
                                suppressHydrationWarning={true}
                              >
                                Join
                              </mdc-text>
                            </Text>
                          </Text>
                        </mdc-button>
                      </Button>
                    </ButtonPill>
                  </div>
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with scheduleInfoFirst supplied 1`] = `
<MeetingContainer
  scheduleInfoFirst="10:00am-11:00am"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      >
                        10:00am-11:00am
                      </mdc-text>
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with scheduleInfoFirstColor supplied 1`] = `
<MeetingContainer
  scheduleInfoFirst="10:00am-11:00am"
  scheduleInfoFirstColor="success"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="success"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="success"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="success"
                        suppressHydrationWarning={true}
                      >
                        10:00am-11:00am
                      </mdc-text>
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with scheduleInfoSecond supplied 1`] = `
<MeetingContainer
  scheduleInfoSecond="10:00am-11:00am"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <DividerDot>
                    <Bullet
                      className="md-divider-dot-wrapper"
                      size="small"
                    >
                      <mdc-bullet
                        class="md-divider-dot-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Bullet>
                  </DividerDot>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      >
                        10:00am-11:00am
                      </mdc-text>
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with scheduleInfoSecondColor supplied 1`] = `
<MeetingContainer
  scheduleInfoSecond="10:00am-11:00am"
  scheduleInfoSecondColor="success"
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <DividerDot>
                    <Bullet
                      className="md-divider-dot-wrapper"
                      size="small"
                    >
                      <mdc-bullet
                        class="md-divider-dot-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Bullet>
                  </DividerDot>
                  <Text
                    data-color="success"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="success"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="success"
                        suppressHydrationWarning={true}
                      >
                        10:00am-11:00am
                      </mdc-text>
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with spacelink supplied 1`] = `
<MeetingContainer
  meetingTitle="TestMeeting"
  scheduleInfoFirst="10:00am-11:00am"
  scheduleInfoSecond="Mon, Jan 1, 2023"
  spaceLink={
    <ButtonHyperlink>
      Example Link
    </ButtonHyperlink>
  }
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      >
                        TestMeeting
                      </mdc-text>
                    </Text>
                  </Text>
                  <DividerDot>
                    <Bullet
                      className="md-divider-dot-wrapper"
                      size="small"
                    >
                      <mdc-bullet
                        class="md-divider-dot-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Bullet>
                  </DividerDot>
                  <ButtonHyperlink
                    className="md-meeting-container-space-link"
                  >
                    <FocusRing>
                      <FocusRing
                        focusClass="md-focus-ring-wrapper children"
                        focusRingClass="md-focus-ring-wrapper children"
                      >
                        <a
                          className="md-button-hyperlink-wrapper md-meeting-container-space-link"
                          data-disabled={false}
                          data-inverted={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          onTouchCancel={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          Example Link
                        </a>
                      </FocusRing>
                    </FocusRing>
                  </ButtonHyperlink>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      >
                        10:00am-11:00am
                      </mdc-text>
                    </Text>
                  </Text>
                  <DividerDot>
                    <Bullet
                      className="md-divider-dot-wrapper"
                      size="small"
                    >
                      <mdc-bullet
                        class="md-divider-dot-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Bullet>
                  </DividerDot>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      >
                        Mon, Jan 1, 2023
                      </mdc-text>
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with style 1`] = `
<MeetingContainer
  style={
    Object {
      "color": "pink",
    }
  }
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
      style={
        Object {
          "color": "pink",
        }
      }
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "color": "pink",
              }
            }
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;

exports[`<MeetingContainer /> snapshot should match snapshot with tags supplied 1`] = `
<MeetingContainer
  tags={
    Array [
      <Chip>
        Messages
      </Chip>,
      <Chip>
        Recording
      </Chip>,
    ]
  }
>
  <Card
    className="md-meeting-container-wrapper"
    height="auto"
  >
    <ButtonSimple
      className="md-meeting-container-wrapper md-card-wrapper"
      data-color="inactive"
      data-height="auto"
      data-rounding={2}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-meeting-container-wrapper md-card-wrapper md-button-simple-wrapper"
            data-color="inactive"
            data-height="auto"
            data-rounding={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <div
              className="md-meeting-container-container"
            >
              <div
                className="md-meeting-container-details"
              >
                <div>
                  <Text
                    tagName="h3"
                    type="header-primary"
                  >
                    <Text
                      className="md-text-wrapper"
                      tagname="h3"
                      type="body-large-bold"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                  <Text
                    data-color="secondary"
                    tagName="small"
                    type="body-secondary"
                  >
                    <Text
                      className="md-text-wrapper"
                      data-color="secondary"
                      tagname="small"
                      type="body-midsize-regular"
                    >
                      <mdc-text
                        class="md-text-wrapper"
                        data-color="secondary"
                        suppressHydrationWarning={true}
                      />
                    </Text>
                  </Text>
                </div>
                <div
                  className="md-meeting-container-tags"
                >
                  <Chip
                    key="0"
                  >
                    <Chip
                      onClick={[Function]}
                      onPointerDown={[Function]}
                      onPointerUp={[Function]}
                    >
                      <mdc-chip
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        suppressHydrationWarning={true}
                      >
                        Messages
                      </mdc-chip>
                    </Chip>
                  </Chip>
                  <Chip
                    key="1"
                  >
                    <Chip
                      onClick={[Function]}
                      onPointerDown={[Function]}
                      onPointerUp={[Function]}
                    >
                      <mdc-chip
                        onPointerDown={[Function]}
                        onPointerUp={[Function]}
                        suppressHydrationWarning={true}
                      >
                        Recording
                      </mdc-chip>
                    </Chip>
                  </Chip>
                </div>
              </div>
              <div
                className="md-meeting-container-actions"
                data-anchor="top"
              >
                <ButtonGroup
                  spaced={true}
                >
                  <div
                    className="md-button-group-wrapper"
                    data-compressed={false}
                    data-orientation="horizontal"
                    data-round={false}
                    data-separator={false}
                    data-spaced={true}
                  />
                </ButtonGroup>
              </div>
            </div>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </Card>
</MeetingContainer>
`;
